--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>     
     <dependency>      
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-core</artifactId>
-      <version>1.10.6</version>
+      <version>1.10.10</version>
     </dependency>   
-    <dependency>      
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>fluent-hc</artifactId>
-      <version>4.5</version>
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback</artifactId>
+    	<version>1.1.3</version>
     </dependency>
   </dependencies>
   
